# TBOT

./: README.md
TBOT with Cogs v5.0/: keep_alive.py  main.py  pyproject.toml
TBOT with Cogs v5.0/cogs/: _afk.py  _banned_words.py  _event.py  _level.py  _owner.py  _setlogs.py  api.py  misc.py  mod.py  money.py  music.py
TBOT with Cogs v5.0/databases/: badwords.json  eventlog.json  level.db  levelconfig.json  modlogs.db  prefixes.json
TBOT with Cogs v5.0/json/: afk.json  mainbank.json  warnings.json
TBOT with Cogs v5.0/unactive/: buttons.py
