[tool.poetry]
name = "repl_python3_TBOT-cogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
humanize = "^3.7.0"
giphy-client = "^1.0.0"
praw = "^7.2.0"
youtube-dl = "^2021.5.16"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
